Add tmux / tms configs to repo

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,9 @@ set -g detach-on-destroy off
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -s escape-time 0
 
+# set default shell to zsh
+set-option -g default-shell /usr/bin/zsh
+
 #--------------------------------------------------------------------------
 # Status line
 #--------------------------------------------------------------------------
